# image-scraper

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: logs.rs  main.rs
core/: Cargo.toml
core/src/: client.rs  image_type.rs  lib.rs  store.rs
index/: Cargo.toml
index/src/: db.rs  lib.rs  timestamp.rs
service/: Cargo.toml
service/src/: error.rs  main.rs  manager.rs  shutdown.rs
