[workspace]
resolver = "2"
members = ["core", "cli"]

[workspace.package]
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/image-scraper"
repository = "https://github.com/travisbrown/image-scraper"
keywords = ["scraping"]
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
chrono = "0.4"
cli-helpers = "0.1"
csv = "1"
hex = "0.4"
imghdr = "0.7"
md5 = "0.8"
reqwest = "0.12"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
