[package]
name = "image-scraper-cli"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
cli-helpers = { workspace = true }
csv = { workspace = true }
image-scraper = { path = "../core/" }
image-scraper-index = { path = "../index/" }
md5 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-hex = "0.1"
thiserror = { workspace = true }
tokio = { workspace = true }
