[package]
name = "image-scraper-index"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
image-scraper = { path = "../core/" }
imghdr = { workspace = true }
md5 = { workspace = true }
reqwest = { workspace = true }
rocksdb = { version = "0.24", features = ["zstd"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
