[package]
name = "image-scraper-service"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
bytes = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = { version = "3", features = ["tracing"] }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
image-scraper = { path = "../core/" }
image-scraper-index = { path = "../index/" }
imghdr = { workspace = true }
log = { workspace = true }
md5 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
